ADD: Alterações para adicionar a tela de Login da aplicação